workstation/oauth-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: workstation-oauth-proxy
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: workstation-proxy-tls
spec:
  selector:
    app: workstation-oauth-proxy
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workstation-oauth-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workstation-oauth-proxy
  template:
    metadata:
      labels:
        app: workstation-oauth-proxy
    spec:
      serviceAccountName: workstation-oauth-proxy
      containers:
        - name: oauth-proxy
          image: quay.io/openshift/origin-oauth-proxy:4.17
          args:
            - --https-address=:8443
            - --provider=openshift
            - --openshift-service-account=workstation-oauth-proxy
            - --upstream=http://workstation-code-server:8080
            - --tls-cert=/etc/tls/private/tls.crt
            - --tls-key=/etc/tls/private/tls.key
            - --cookie-secret-file=/etc/proxy/cookie/cookie-secret
            - --skip-provider-button=true
            - '--openshift-sar={"namespace":"workstation","resource":"services","verb":"get","resourceName":"workstation-code-server"}'
          ports:
            - containerPort: 8443
              name: https
          volumeMounts:
            - name: tls
              mountPath: /etc/tls/private
              readOnly: true
            - name: cookie-secret
              mountPath: /etc/proxy/cookie
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: workstation-proxy-tls
        - name: cookie-secret
          secret:
            secretName: workstation-oauth-proxy-cookie
