workstation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workstation-code-server
spec:
  selector:
    vm.kubevirt.io/name: workstation
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
